# RouteOps

./: .gitignore  CORS_API_FIX.md  DESIGN_MIGRATION_COMPLETE.md  DISTRIBUTED_SERVICE_GUIDE.md  DOCKER_COMMUNICATION_FIX.md  DOCKER_CONNECTIVITY_FIX.md  DOCKER_FIX_INDEX.md  DOCKER_TROUBLESHOOTING.md  DOCUMENTATION_INDEX.md  FIX_LOTTIE_403_ERROR.md  LOCALHOST_SETUP.md  MASTER_INDEX.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_FIX_REFERENCE.md  QUICK_REFERENCE.md  README.md  README_REFACTORING.md  REFACTORING_SUMMARY.md  RESOURCE_INVENTORY.md  ROUTING_BACKEND_TESTCASES.md  ROUTING_SERVICE_ARCHITECTURE.md  SERVICE_DOCUMENTATION_GUIDE.md  VISUAL_SUMMARY.md  comprehensive_test_results_20260425_060041.txt  comprehensive_test_results_20260425_060416.txt  diagnose-docker-connection.ps1  diagnose-docker-detailed.ps1  diagnose-docker.ps1  diagnose-docker.sh  docker-compose.yml  gateway_build_output.txt  mock_routing_engine.py  run_api_tests.sh  start_local.sh  test_api.ps1  test_api2.ps1  test_api_final.ps1  test_services.ps1
gateway/: Dockerfile  entrypoint.sh  gateway-api.err  pom.xml  routing-backend.http
nginx-templates/: nginx-template.conf  nginx-template2.conf  nginx-template3.conf
reactjs/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
reactjs/route-visualizer/: index.html  package.json  vite.config.js
route-guidance-system/: README.md
routing-engine/: CMakeLists.txt  Dockerfile  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Utils.cpp  Utils.h  main.cpp
tools/: convert_osm_to_graph_csv.py
(+149 files in other folders)
